--- a/css/admin.css
+++ b/css/admin.css
@@ -11,7 +11,8 @@ body {
 
 nav {
     padding: 5px 124px !important;
-    box-shadow: 0px 8px 5px -10px rgba(0,0,0,.5);
+    /* box-shadow: 0px 8px 5px -10px rgba(0,0,0,.5); */
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
 }
 
 nav a span {
@@ -80,6 +81,9 @@ footer {
     width: 100%;
     background-color: #E9ECEF;
     padding: 2rem 124px .7rem 124px;
+}
+
+footer.fixed {
     bottom: 0;
     position: fixed;
 }
